--- a/pom.xml
+++ b/pom.xml
@@ -31,29 +31,22 @@
         </dependency>
 
         <dependency>
-            <groupId>io.pivotal.gemfire</groupId>
+            <groupId>org.apache.geode</groupId>
             <artifactId>geode-core</artifactId>
-            <version>${geode.version}</version>
+            <version>1.12.0</version>
         </dependency>
 
         <dependency>
-            <groupId>io.pivotal.gemfire</groupId>
+            <groupId>org.apache.geode</groupId>
             <artifactId>geode-common</artifactId>
-            <version>${geode.version}</version>
+            <version>1.12.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.geode</groupId>
             <artifactId>geode-json</artifactId>
             <version>1.3.0</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-gemfire</artifactId>
-            <version>1.7.0.APACHE-GEODE-EA-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
@@ -114,9 +107,15 @@
             <version>2.7</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-gemfire</artifactId>
-            <version>2.0.5.RELEASE</version>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.6.1</version>
         </dependency>
 
 
@@ -135,19 +134,6 @@
 
     <repositories>
 
-            <repository>
-                <id>gemfire-release-repo</id>
-                <name>Pivotal GemFire Release Repository</name>
-                <url>https://commercial-repo.pivotal.io/data3/gemfire-release-repo/gemfire</url>
-            </repository>
-
-
-
-        <repository>
-            <id>gemfire-repository</id>
-            <name>Gemfire Repository</name>
-            <url>http://dist.gemstone.com/maven/release</url>
-        </repository>
 </repositories>
 
 </project>
